ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: myapp
  name: nodejs-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/load-balancer-name: myapp-alb
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /nodejs
            pathType: Prefix
            backend:
              service:
                name: nodejs-service
                port:
                  number: 3000
